Fixed horizontal scroll.

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
   background-color: var(--deep-green);
   position: relative;
   z-index: 0;
